# BarrierSynchronization

./: .gitignore  CMakeLists.txt  Makefile  README.md  barrier.c  barrier.h  numbers_list.h  parallel_sum.c
benchmarks/: thousand_threads_waiting.c
examples/: parallel_sum.c  sleepy_threads.c
tests/: parallel_sum_test.c
